fix java 21 enable preview